--- a/style.css
+++ b/style.css
@@ -248,14 +248,20 @@ body {
 
 @media screen and (max-width: 460px) {
     .titreElementProfile {
-        font-size: 2.5em;
+        font-size: 2em;
     }
     .elementprofile {
-        margin-left: 15px;
+        margin: 10px;
     }
     .descriptionProfile {
-        font-size: 1em;
+        font-size: 0.9em;
     }
+
+    .elementprofile2{
+        gap: 0px;
+        justify-content: space-around;
+    }
+
     .boutton {
         height: 45px;
         width: 120px;
