--- a/style.css
+++ b/style.css
@@ -5,17 +5,11 @@ body {
     flex-wrap: wrap;
 }
 
-.main {
-    height: 94vh;
-    overflow: scroll;
-}
 
 /*---------------------------------------------------------------------------HEADER--------------------------------------------------------------------------------------------------------------*/
 
 .headerBody {
-    background-color: white;
     width: 100%;
-    height: 6vh;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -28,9 +22,11 @@ body {
 }
 
 .sidebar {
+    min-height: 30px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .elementheader {
@@ -43,13 +39,17 @@ body {
 
 @media screen and (max-width: 900px) {
     .sidebar {
+        position: fixed;
+        bottom: 0;
         width: 100%;
         justify-content: space-around;
         flex-wrap: wrap;
+        background-color: white;
     }
 }
 
 @media screen and (min-width: 320px) and (max-width: 420px) {}
+
 
 /*-----------------------------------------------------------------------------HOME--------------------------------------------------------------------------------------------------------------*/
 
@@ -161,6 +161,7 @@ body {
     }
 }
 
+
 /*---------------------------------------------------------------------------PROFILE----------------------------------------------------------------------------------------------------------*/
 
 .profile {
@@ -253,18 +254,17 @@ body {
     .descriptionProfile {
         font-size: 0.9em;
     }
-
-    .elementprofile2{
+    .elementprofile2 {
         gap: 0px;
         justify-content: space-around;
     }
-
     .boutton {
         height: 45px;
         width: 120px;
         font-size: 0.9em;
     }
 }
+
 
 /*--------------------------------------------------------------------------SERVICE---------------------------------------------------------------------------------------------------------*/
 
@@ -339,6 +339,7 @@ body {
         flex-direction: column;
     }
 }
+
 
 /*--------------------------------------------------------------------------CLIENTS-------------------------------------------------------------------------------------------------------*/
 
@@ -448,6 +449,7 @@ body {
     }
 }
 
+
 /*---------------------------------------------------------------------------CITATION----------------------------------------------------------------------------------------------------*/
 
 .citation {
@@ -498,6 +500,7 @@ body {
         margin: 10px;
     }
 }
+
 
 /*--------------------------------------------------------------------------EN SAVOIR PLUS------------------------------------------------------------------------------------------------*/
 
@@ -691,6 +694,7 @@ body {
         width: 100%;
     }
 }
+
 
 /*-----------------------------------------------------------------------CONTACTS-------------------------------------------------------------------------------------------------------------------*/
 
