--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ body {
     background-image: url(./image/bg.jpg);
     background-position: center;
     min-height: 400px;
+    border-radius: 5px;
 }
 
 .listeService {
@@ -391,6 +392,8 @@ body {
     width: 400px;
     margin: 20px;
     margin-bottom: 40px;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 .textecollaborateur {
@@ -473,7 +476,7 @@ body {
 }
 
 .elementCitationDeux {
-    color: rgb(63, 63, 63);
+    color: rgb(202 159 224);
     font-size: 2em;
     font-family: 'Noto Sans Display', sans-serif;
 }
