--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ body {
     flex-direction: row-reverse;
     align-items: center;
     z-index: 1;
+    position: fixed;
+    top: 0;
+    background-color: white;
 }
 
 .iconMenu {
@@ -123,7 +126,7 @@ body {
 }
 
 .taillesoustitre {
-    color: rgb(155, 155, 155);
+    color: rgb(202 159 224);
     font-size: 2em;
     font-family: 'Noto Sans Display', sans-serif;
     margin-top: 0;
@@ -212,6 +215,7 @@ body {
     display: block;
     height: 45px;
     width: 150px;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -734,7 +738,8 @@ body {
 
 .imageElementProjets{
     height: 300px;
-    width: 500px
+    width: 500px;
+    border-radius: 5px;
 }
 
 .elementProjetsDeux{
@@ -748,7 +753,8 @@ body {
     width:  70%;
     margin-bottom: 2%;
     display: block;
-    border: white solid 5px;
+    border: white solid 4px;
+    border-radius: 5px;
     box-sizing: border-box;
     display:flex;
     flex-direction: column;
@@ -965,17 +971,19 @@ body {
 
 .imageElementContacts {
     width: 100%;
+    border-radius: 5px;
 }
 
 .texteElementContacts {
     font-family: 'Noto Sans Display', sans-serif;
-    color: rgb(110, 105, 105);
+    color: rgb(202 159 224);
     font-size: 2em;
 }
 
 .elementContactsDeux {
     width: 35%;
-    border: 5px solid white;
+    border: 4px solid white;
+    border-radius: 5px;
     margin-top: 100px;
     display: flex;
     flex-direction: column;
