--- a/style.css
+++ b/style.css
@@ -10,29 +10,6 @@ body {
 }
 
 
-/*---------------------------------------------------------------------------ANIMATION--------------------------------------------------------------------------------------------------------------*/
-
-@keyframes slideIn {
-    0% {
-        opacity: 0;
-        left: -100%;
-    }
-    100% {
-        opacity: 1;
-        left: 0;
-    }
-}
-
-@keyframes rotation {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-
 /*---------------------------------------------------------------------------HEADER--------------------------------------------------------------------------------------------------------------*/
 
 .headerBody {
@@ -108,6 +85,7 @@ body {
 /*-----------------------------------------------------------------------------HOME--------------------------------------------------------------------------------------------------------------*/
 
 .home {
+    position: relative;
     min-height: 800px;
     width: 100vw;
     margin: 0%;
@@ -142,10 +120,10 @@ body {
     width: 100px;
     margin-left: 160px;
     display: inline-block;
-    animation: rotation 15s linear infinite;
 }
 
 .titre {
+    /* Déplace l'élément hors de l'écran à gauche */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -460,7 +438,6 @@ body {
     height: 85%;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-
 }
 
 @media screen and (max-width: 1320px) {
@@ -495,15 +472,10 @@ body {
     }
     .clientsdeux {
         margin: 10px;
-        height: auto;
     }
-
     .imageCollaborateur {
-        width: 100%;
-        background-color: initial;
         border-radius: 5px;
     }
-
     .textecollaborateur {
         font-size: 1em;
     }
@@ -1107,4 +1079,35 @@ body {
 }
 
 
-/*-----------------------------------------------------------------------FOOTER-------------------------------------------------------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------ANIMATION-------------------------------------------------------------------------------------------------------------------*/
+
+@keyframes slideIn {
+    0% {
+        clip-path: inset(-60% 100% -60% -10%);
+        animation-timing-function: cubic-bezier(0.31, 0.92, 0.6, 1.01);
+    }
+    100% {
+        clip-path: inset(-60% -10% -60% -10%);
+    }
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.spiner {
+    animation: rotation 15s linear infinite;
+}
+
+.slideInTitle {
+    animation: slideIn 3s;
+}
+
+.slideIn {
+    animation: slideIn 1s;
+}
