--- a/style.css
+++ b/style.css
@@ -436,8 +436,6 @@ body {
 
 .collab {
     height: 85%;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
 }
 
 @media screen and (max-width: 1320px) {
@@ -807,7 +805,7 @@ body {
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    height: 300px;
+    height: 350px;
 }
 
 .titreLienProjet {
@@ -817,6 +815,7 @@ body {
     text-decoration: underline;
     margin: 10px;
     width: 95%;
+    height: 10%;
 }
 
 .texteLienProjet {
@@ -826,6 +825,7 @@ body {
     font-size: 1.2em;
     margin: 10px;
     width: 95%;
+    height: 70%;
 }
 
 .SuivrelienProjet {
@@ -836,9 +836,13 @@ body {
     text-align: right;
     color: white;
     font-weight: bolder;
+    height: 20%;
 }
 
 @media screen and (max-width:1230px) {
+    .lienProjet {
+        height: 300px;
+    }
     .titreElementProjets {
         font-size: 3.2em;
         text-align: center;
@@ -866,7 +870,6 @@ body {
     .texteLienProjet {
         display: flex;
         justify-content: center;
-        align-items: center;
         text-decoration: none;
         color: white;
         font-family: 'Noto Sans Display', sans-serif;
