--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
     .tailletitre {
         margin-left: 10px;
         margin-right: 10px;
+        font-size: 4em;
     }
     .taillesoustitre {
         margin-left: 10px;
