--- a/style.css
+++ b/style.css
@@ -267,6 +267,13 @@ body {
     }
     .titreElementProfile {
         font-size: 3em;
+        text-align: center;
+    }
+    .descriptionProfile {
+        text-align: center;
+    }
+    .elementprofile2 {
+        align-self: center;
     }
 }
 
@@ -307,6 +314,8 @@ body {
 }
 
 .titreService {
+    margin-top: 50px;
+    margin-left: 50px;
     display: flex;
     justify-content: center;
 }
@@ -322,12 +331,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 700px;
+    max-width: 95%;
     background-image: url(./image/bg.jpg);
     background-position: center;
     min-height: 500px;
     border-radius: 5px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .listeService {
@@ -358,7 +368,7 @@ body {
 
 @media screen and (max-width: 500px) {
     .imageService {
-        width: 100%;
+        width: 90%;
     }
     .titreservice {
         font-size: 2em;
@@ -744,9 +754,6 @@ body {
     .soustitreEnSavoirPlus {
         font-size: 0.9em;
         text-align: center;
-    }
-    .descriptionEnSavoirPlus {
-        width: 100%;
     }
     .titreElementDescription {
         font-size: 1.05em;
