--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ body {
 .titreService {
     margin-top: 50px;
     margin-left: 50px;
+    margin-right: 50px;
     display: flex;
     justify-content: center;
 }
