--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
 .main {
     overflow-x: hidden;
 }
+*{
+    z-index: 1;
+}
 /*---------------------------------------------------------------------------Style vague entre les sections --------------------------------------------------------------------------------------------------------------*/
 
 
@@ -16,6 +19,10 @@ body {
     width: 100%;
     height: 150px;
     margin-top: -5px; /* Adjust the overlap */
+    margin-bottom: -5px; /* Adjust the overlap */
+    position: relative;z-index: 2;
+
+
 }
 
 .waveTop svg {
@@ -28,7 +35,11 @@ body {
     width: 100%;
     height: 150px;
     margin-top: -5px; /* Adjust the overlap */
+    margin-bottom: -5px; /* Adjust the overlap */
     rotate: 180deg;
+    position: relative;
+    z-index: 2;
+
 }
 .waveBottom svg {
     display: block;
@@ -71,7 +82,7 @@ body {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    z-index: 1;
+    z-index: 3;
     position: fixed;
     top: 0;
 }
