--- a/style.css
+++ b/style.css
@@ -11,14 +11,15 @@ body {
 *{
     z-index: 1;
 }
+/*--------------------------------------------------------------------------- Style vague entre les sections --------------------------------------------------------------------------------------------------------------*/
 
 
 .waveTop {
     position: relative;
     width: 100%;
     height: 150px;
-    margin-top: -5px; /* Adjust the overlap */
-    margin-bottom: -5px; /* Adjust the overlap */
+    margin-top: -9px; /* Adjust the overlap */
+    margin-bottom: -9px; /* Adjust the overlap */
     position: relative;z-index: 2;
 
 
@@ -33,8 +34,8 @@ body {
     position: relative;
     width: 100%;
     height: 150px;
-    margin-top: -5px; /* Adjust the overlap */
-    margin-bottom: -5px; /* Adjust the overlap */
+    margin-top: -9px; /* Adjust the overlap */
+    margin-bottom: -9px; /* Adjust the overlap */
     rotate: 180deg;
     position: relative;
     z-index: 2;
@@ -46,11 +47,13 @@ body {
     height: 100%;
 }
 .blackBkg{
-    background-color: rgb(0, 0, 0);
-
+    background: linear-gradient(to bottom, #000000, rgb(131, 92, 246)); /* Dégradé du haut vers le bas */
 }
 .violetBkg{
-    background-color: rgb(131, 92, 246);
+    background: linear-gradient(to bottom, rgb(131, 92, 246), rgb(241, 92, 246)); /* Dégradé du haut vers le bas */
+}
+.violetAndBlack{
+    background: linear-gradient(to bottom, #000000, rgb(131, 92, 246)); /* Dégradé du haut vers le bas */
 
 }
 
