feat : Création d'un labo avec vuejs + vite

--- a/style.css
+++ b/style.css
@@ -850,7 +850,13 @@ body {
 
 
 /*-----------------------------------------------------------------------PROJETS--------------------------------------------------------------------------------------------------------------------*/
-
+.labodev{
+        position: relative;
+    max-width: 600px;
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 50px;
+}
 .projets {
     min-height: 830px;
     width: 100vw;
